# adaptive-rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
app/: agent.py  chat_history.py  config.py  ingest.py  logging_config.py  main.py  rag.py  streamlit_app.py
eval/: evaluate.py  results.json
